; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/scripting-engines/extr_trace-event-python.c_python_process_stat.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/scripting-engines/extr_trace-event-python.c_python_process_stat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_stat_config = type { i64 }
%struct.evsel = type { %struct.TYPE_4__*, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { %struct.perf_cpu_map*, %struct.perf_thread_map* }
%struct.perf_cpu_map = type { i32, i32* }
%struct.perf_thread_map = type { i32 }

@AGGR_GLOBAL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.perf_stat_config*, %struct.evsel*, i32)* @python_process_stat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @python_process_stat(%struct.perf_stat_config* %0, %struct.evsel* %1, i32 %2) #0 {
  %4 = alloca %struct.perf_stat_config*, align 8
  %5 = alloca %struct.evsel*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.perf_thread_map*, align 8
  %8 = alloca %struct.perf_cpu_map*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.perf_stat_config* %0, %struct.perf_stat_config** %4, align 8
  store %struct.evsel* %1, %struct.evsel** %5, align 8
  store i32 %2, i32* %6, align 4
  %11 = load %struct.evsel*, %struct.evsel** %5, align 8
  %12 = getelementptr inbounds %struct.evsel, %struct.evsel* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 1
  %14 = load %struct.perf_thread_map*, %struct.perf_thread_map** %13, align 8
  store %struct.perf_thread_map* %14, %struct.perf_thread_map** %7, align 8
  %15 = load %struct.evsel*, %struct.evsel** %5, align 8
  %16 = getelementptr inbounds %struct.evsel, %struct.evsel* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load %struct.perf_cpu_map*, %struct.perf_cpu_map** %17, align 8
  store %struct.perf_cpu_map* %18, %struct.perf_cpu_map** %8, align 8
  %19 = load %struct.perf_stat_config*, %struct.perf_stat_config** %4, align 8
  %20 = getelementptr inbounds %struct.perf_stat_config, %struct.perf_stat_config* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @AGGR_GLOBAL, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %32

24:                                               ; preds = %3
  %25 = load %struct.evsel*, %struct.evsel** %5, align 8
  %26 = load i32, i32* %6, align 4
  %27 = load %struct.evsel*, %struct.evsel** %5, align 8
  %28 = getelementptr inbounds %struct.evsel, %struct.evsel* %27, i32 0, i32 0
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = call i32 @process_stat(%struct.evsel* %25, i32 -1, i32 -1, i32 %26, i32* %30)
  br label %73

32:                                               ; preds = %3
  store i32 0, i32* %10, align 4
  br label %33

33:                                               ; preds = %70, %32
  %34 = load i32, i32* %10, align 4
  %35 = load %struct.perf_thread_map*, %struct.perf_thread_map** %7, align 8
  %36 = getelementptr inbounds %struct.perf_thread_map, %struct.perf_thread_map* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = icmp slt i32 %34, %37
  br i1 %38, label %39, label %73

39:                                               ; preds = %33
  store i32 0, i32* %9, align 4
  br label %40

40:                                               ; preds = %66, %39
  %41 = load i32, i32* %9, align 4
  %42 = load %struct.perf_cpu_map*, %struct.perf_cpu_map** %8, align 8
  %43 = getelementptr inbounds %struct.perf_cpu_map, %struct.perf_cpu_map* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = icmp slt i32 %41, %44
  br i1 %45, label %46, label %69

46:                                               ; preds = %40
  %47 = load %struct.evsel*, %struct.evsel** %5, align 8
  %48 = load %struct.perf_cpu_map*, %struct.perf_cpu_map** %8, align 8
  %49 = getelementptr inbounds %struct.perf_cpu_map, %struct.perf_cpu_map* %48, i32 0, i32 1
  %50 = load i32*, i32** %49, align 8
  %51 = load i32, i32* %9, align 4
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds i32, i32* %50, i64 %52
  %54 = load i32, i32* %53, align 4
  %55 = load %struct.perf_thread_map*, %struct.perf_thread_map** %7, align 8
  %56 = load i32, i32* %10, align 4
  %57 = call i32 @perf_thread_map__pid(%struct.perf_thread_map* %55, i32 %56)
  %58 = load i32, i32* %6, align 4
  %59 = load %struct.evsel*, %struct.evsel** %5, align 8
  %60 = getelementptr inbounds %struct.evsel, %struct.evsel* %59, i32 0, i32 0
  %61 = load %struct.TYPE_4__*, %struct.TYPE_4__** %60, align 8
  %62 = load i32, i32* %9, align 4
  %63 = load i32, i32* %10, align 4
  %64 = call i32* @perf_counts(%struct.TYPE_4__* %61, i32 %62, i32 %63)
  %65 = call i32 @process_stat(%struct.evsel* %47, i32 %54, i32 %57, i32 %58, i32* %64)
  br label %66

66:                                               ; preds = %46
  %67 = load i32, i32* %9, align 4
  %68 = add nsw i32 %67, 1
  store i32 %68, i32* %9, align 4
  br label %40

69:                                               ; preds = %40
  br label %70

70:                                               ; preds = %69
  %71 = load i32, i32* %10, align 4
  %72 = add nsw i32 %71, 1
  store i32 %72, i32* %10, align 4
  br label %33

73:                                               ; preds = %24, %33
  ret void
}

declare dso_local i32 @process_stat(%struct.evsel*, i32, i32, i32, i32*) #1

declare dso_local i32 @perf_thread_map__pid(%struct.perf_thread_map*, i32) #1

declare dso_local i32* @perf_counts(%struct.TYPE_4__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
